# WaykiChain

./: .cproject  .gitignore  .gitmodules  .project  COPYING  INSTALL.md  README.md  WaykiChain.conf  aclocal.m4  autotest.bat  confdefs.h  configure.ac  conftest.cpp
src/: .clang-format  Makefile.am  Makefile.am.bak  Makefile.include  Makefile_softfloat  Makefile_test.am  Makefile_tests.am  Makefile_unit_tests.am  Makefile_wasm  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  arith_uint256.cpp  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkqueue.h  clientversion.h  coin-config.h  coind-cli.cpp  coind-res.rc  coind.cpp  coind_init.sh  common.h  configuration.cpp  configuration.h  core.cpp  core.h  crypter.cpp  crypter.h  cuiserver.cpp  cuiserver.h  database.cpp  (+54 more)
src/accounts/: account.cpp  account.h  accounts.cpp  accounts.h  asset.h  cdp.cpp  cdp.h  id.cpp  id.h  key.cpp  key.h  keystore.cpp  keystore.h  receipt.h  vote.h
src/chain/: blockdelegates.cpp  blockdelegates.h  chain.cpp  chain.h  merkletree.cpp  merkletree.h
src/commons/: SafeInt3.hpp  allocators.cpp  allocators.h  arith_uint256.cpp  base58.cpp  base58.h  bloom.cpp  bloom.h  common.h  leb128.h  limitedmap.h  lrucache.hpp  messagequeue.h  mruset.h  openssl.hpp  random.cpp  random.h  randomenv.cpp  serialize.h  tinyformat.h  types.h  uint256.cpp  uint256.h  util.cpp  util.h
src/compat/: byteswap.h  compat.h  endian.h  glibc_compat.cpp
src/config/: cdpparams.h  chainparams.cpp  chainparams.h  clientversion.h  coin-config.h  config.h  configuration.cpp  configuration.h  const.h  errorcode.h  scoin.h  sysparams.h  txbase.h  version.cpp  version.h
src/crypto/: common.h  hash.cpp  hash.h
src/entities/: account.cpp  account.h  asset.cpp  asset.h  cdp.cpp  cdp.h  contract.cpp  contract.h  dexorder.cpp  dexorder.h  id.cpp  id.h  key.cpp  key.h  keystore.cpp  keystore.h  price.h  proposal.cpp  proposal.h  proposal.hpp  proposalserializer.h  receipt.h  stake.h  utxo.h  vote.h
src/json/: json_spirit_utils.h  json_spirit_value.h
src/leveldb/: Makefile  build_config.mk  build_detect_platform
src/m4/: talents_find_bdb48.m4
src/miner/: miner.cpp  miner.h  pbftcontext.cpp  pbftcontext.h  pbftlimitmap.h  pbftmanager.cpp  pbftmanager.h
src/p2p/: addrman.cpp  addrman.h  chainmessage.cpp  chainmessage.h  netmessage.cpp  netmessage.h  node.cpp  node.h  processmessage.hpp  protocol.cpp  protocol.h  sendmessage.hpp
src/persistence/: accountdb.cpp  accountdb.h  accountview.cpp  accountview.h  assetdb.cpp  assetdb.h  axcdb.h  block.cpp  block.h  blockdb.cpp  blockdb.h  blockundo.cpp  blockundo.h  cachewrapper.cpp  cachewrapper.h  cdpdb.cpp  cdpdb.h  contractdb.cpp  contractdb.h  dbaccess.h  dbcache.h  dbconf.h  dbiterator.h  delegatedb.cpp  delegatedb.h  dex.cpp  dex.h  dexdb.cpp  dexdb.h  disk.cpp  disk.h  leveldbwrapper.cpp  leveldbwrapper.h  logdb.cpp  logdb.h  pricefeeddb.cpp  pricefeeddb.h  stakedb.cpp  stakedb.h  syncdata.cpp  (+11 more)
src/ptest/: CAnony_tests.cpp  CAnony_tests.h  CBlackHalo_tests.cpp  CBlackHalo_tests.h  CGuarantee_tests.cpp  CGuarantee_tests.h  CIpo_tests.cpp  CIpo_tests.h  CRedPacket_tests.cpp  CRedPacket_tests.h  CreateMinterKey_tests.cpp  CreateTx_tests.cpp  CreateTx_tests.h  CycleP2PBet_tests.cpp  CycleP2PBet_tests.h  CycleSesureTrade_tests.cpp  CycleSesureTrade_tests.h  CycleTestBase.h  CycleTestManger.cpp  CycleTestManger.h  Delegatetx_tests.cpp  Main_tests.cpp  Miner_tests.cpp  Mining_tests.cpp  P_test.cpp  UpdateAccount_tests.cpp
src/ptests/: CAnony_tests.cpp  CBlackHalo_tests.cpp  CBlackHalo_tests.h  CGuarantee_tests.cpp  CGuarantee_tests.h  CIpo_tests.cpp  CIpo_tests.h  CRedPacket_tests.cpp  CRedPacket_tests.h  CreateMinterKey_tests.cpp  CreateMinterKey_tests.h  CreateTx_tests.cpp  CreateTx_tests.h  CycleP2PBet_tests.cpp  CycleP2PBet_tests.h  CycleSesureTrade_tests.cpp  CycleTestBase.cpp  CycleTestBase.h  CycleTestManger.cpp  Delegatetx_tests.cpp  Main_tests.cpp  Miner_tests.cpp  Mining_tests.cpp  P_test.cpp  UpdateAccount_tests.cpp
src/rpc/: httpserver.cpp  httpserver.h  rpcapi.h  rpcapiconf.h  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdex.cpp  rpcdex.h  rpcdump.cpp  rpcgenrawtx.cpp  rpcgenrawtx.h  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcproposal.cpp  rpcproposal.h  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcscoin.cpp  rpcscoin.h  rpcserialize.cpp  rpcserver.cpp  rpcserver.h  rpcsubmittx.cpp  rpctpstester.cpp  rpctx.cpp  rpctx.h  rpctxserializer.cpp  rpcutxo.cpp  rpcvm.cpp  rpcvm.h  rpcwallet.cpp  rpcwallet.cpp.bak  rpcwasm.cpp  rpcwasm.h
src/secp256k1/: .gitignore  Makefile.am
src/stablecoin/: stablecoin.cpp  stablecoin.h
src/support/: events.cpp  events.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  account_tests.cpp  accountview_tests.cpp  appacc_test.cpp  base32_tests.cpp  base58_tests.cpp  betroll_test.cpp  bloom_tests.cpp  canonical_tests.cpp  chainparams_tests.cpp  checkblock_tests.cpp  key_tests.cpp  main_tests.cpp  multisig_tests.cpp  pressure_tests.cpp  scriptdb_tests.cpp  scriptdbex_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  system_test.cpp  systemacct_test.cpp  systestbase.cpp  systestbase.h  systestscript.cpp  test_coin.cpp  uint256_tests.cpp  util_tests.cpp
src/tests/: DoS_tests.cpp  account_tests.cpp  accountview_tests.cpp  allocator_tests.cpp  appacc_test.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  betroll_test.cpp  bloom_tests.cpp  canonical_tests.cpp  chainparams_tests.cpp  dbaccess_tests.cpp  key_tests.cpp  leb128_tests.cpp  main_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pressure_tests.cpp  pubkey_tests.cpp  scriptdb_tests.cpp  scriptdbex_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  system_test.cpp  systemacct_test.cpp  systestbase.cpp  systestbase.h  systestscript.cpp  test_coin.cpp  uint256_tests.cpp  util_tests.cpp
src/tx/: accountpermscleartx.cpp  accountpermscleartx.h  accountreg.cpp  accountreg.h  accountregtx.cpp  accountregtx.h  assettx.cpp  assettx.h  bcoin.cpp  bcoin.h  (+70 more)
(+707 files in other folders)
